Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-18235

[C++][Gandiva] Fix the like function implementation for escape chars

    XMLWordPrintableJSON

Details

    Description

      The current conversion of sql like patterns to pcre doesn't work if the escape character is one of the special characters to pcre. Fix this by not escaping those characters if it the escape character itself.

      Attachments

        Issue Links

          Activity

            People

              siddhantrao Siddhant Rao
              siddhantrao Siddhant Rao
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 20m
                  2h 20m