ARROW-18235: [C++][Gandiva] Fix the like function implementation for escape chars (#14579)

The current implementation of optimisation for like function does a
 removal of the escape char, this causes errors in matching if the escape
 char is one of the pcre special chars or if the escape char is followed
 by itself.
 
 Fix this by only removing the '\\' escape char during optimisation.

Authored-by: Siddhant Rao <siddhant.rao@dremio.com>
Signed-off-by: Sutou Kouhei <kou@clear-code.com>